Closed
Bug 1285318
Opened 10 years ago
Closed 10 years ago
Turn off WebRTC TCP packet filter for e10s
Categories
(Core :: WebRTC: Networking, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla50
| backlog | webrtc/webaudio+ |
People
(Reporter: drno, Assigned: drno)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
|
58 bytes,
text/x-review-board-request
|
mjf
:
review+
lizzard
:
approval-mozilla-aurora+
lizzard
:
approval-mozilla-beta+
|
Details |
Bugs 1279514 and 1275216 revealed that with the current implementation of the TCP packet filter for e10s users who use a HTTP proxy and try to use a WebRTC service which provides a TURN TCP server will experience an (intended) content process crash.
The problem is that the TCP filter from bug 1244926 only allows STUN packets as the initial packets to be exchanged over a TCP connection created by WebRTC content. But in case of an HTTP proxy is used first an HTTP CONNECT is send to the proxy and only after the proxy responded with a 200 OK our implementation starts to send STUN packets to the TURN server.
We need to find a different solution then the code in bug 1244926 to handle all possible scenarios which can occur over a WebRTC TCP connection.
To prevent a regression from the users perspective when e10s gets turned on for them (using TURN TCP through an HTTP proxy works without e10s) we need to turn the packet filtering off until we have a better solution.
| Assignee | ||
Comment 1•10 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/62906/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/62906/
Attachment #8768873 -
Flags: review?(mfroman)
| Assignee | ||
Updated•10 years ago
|
Attachment #8768873 -
Flags: review?(mfroman)
| Assignee | ||
Comment 2•10 years ago
|
||
Comment on attachment 8768873 [details]
Bug 1285318: turn of WebRTC TCP packet filtering.
Review request updated; see interdiff: https://reviewboard.mozilla.org/r/62906/diff/1-2/
Attachment #8768873 -
Flags: review?(mfroman)
Comment 3•10 years ago
|
||
Comment on attachment 8768873 [details]
Bug 1285318: turn of WebRTC TCP packet filtering.
https://reviewboard.mozilla.org/r/62906/#review59814
Looks good to me.
Attachment #8768873 -
Flags: review?(mfroman) → review+
| Assignee | ||
Comment 4•10 years ago
|
||
Comment on attachment 8768873 [details]
Bug 1285318: turn of WebRTC TCP packet filtering.
Approval Request Comment
[Feature/regressing bug #]: 1244926 introduce a new packet filter
[User impact if declined]: For users who have a HTTP proxy configured in FF and try to a WebRTC service with a TURN TCP relay (good WebRTC service do provide one to increase chance for a successful call) the content process under e10s crashes.
[Describe test coverage new/current, TreeHerder]: manual testing only.
[Risks and why]: no risk as it only turns off the feature which got added in bug 1244926.
[String/UUID change made/needed]: N/A
Attachment #8768873 -
Flags: approval-mozilla-beta?
Attachment #8768873 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Updated•10 years ago
|
status-firefox48:
--- → affected
status-firefox49:
--- → affected
status-firefox50:
--- → affected
tracking-e10s:
--- → ?
| Assignee | ||
Updated•10 years ago
|
backlog: --- → webrtc/webaudio+
Rank: 11
Pushed by drno@ohlmeier.org:
https://hg.mozilla.org/integration/autoland/rev/b6984012fb0b
turn of WebRTC TCP packet filtering. r=mjf
Comment 6•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Comment 7•10 years ago
|
||
Comment on attachment 8768873 [details]
Bug 1285318: turn of WebRTC TCP packet filtering.
Revert to previous behavior to avoid a crash, let's try it. This should be in beta 7 build next Monday.
Attachment #8768873 -
Flags: approval-mozilla-beta?
Attachment #8768873 -
Flags: approval-mozilla-beta+
Attachment #8768873 -
Flags: approval-mozilla-aurora?
Attachment #8768873 -
Flags: approval-mozilla-aurora+
Comment 8•10 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•